--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="asset/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>CCS GRID</title>
+    <title>Cars</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <div class="navar box">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="#"><img class="logo" src="./asset/img/foto header.png" alt=""></a>
+                      <a class="navbar-brand" href="#"><img class="logo" src="./asset/img/Jeep-logo.png" alt=""></a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -27,11 +27,11 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">Modelo</a>
                           </li>
                           <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              Dropdown
+                              Año
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                               <li><a class="dropdown-item" href="#">Action</a></li>
@@ -41,7 +41,7 @@
                             </ul>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
                           </li>
                         </ul>
                         <form class="d-flex">
@@ -61,11 +61,11 @@
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                        Perro
+                        Renegade
                     </button>
                 </div>
-                <p>Figuras</p>
-                <p>Funkos</p>
+                <p>Compass</p>
+                <p>Rubicon</p>
                 <p>Accesorios</p>
 
             </div>
@@ -76,99 +76,99 @@
 
 
             <div class="producto">
-                <img src="asset/img/855290001_1.jpg" alt="">
+                <img src="asset/img/renegade-blanca.png" alt="">
                 <div class="price">
-                    <h5> Super Sayayin Goku</h5>
-                    <p>18.990</p>
+                    <h5> Renegade 4x2 Automatica</h5>
+                    <p>2022</p>
                     <div class="botton">
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-primary">Cotizar</a>
                     </div>
 
                 </div>
 
             </div>
             <div class="producto">
-                <img src="asset/img/goku.jpg" alt="">
+                <img src="asset/img/renegade-militar.png" alt="">
                 <div class="price">
-                    <h5> Super Sayayin Goku</h5>
-                    <p>18.990</p>
+                    <h5> Renegade 4x2 Automatica</h5>
+                    <p>2021</p>
                     <div class="botton">
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-primary">Cotizar</a>
                     </div>
                 </div>
 
             </div>
             <div class="producto">
-                <img src="asset/img/piccolo.jpg" alt="">
+                <img src="asset/img/renegade-negra.png" alt="">
                 <div class="price">
-                    <h5> Super Sayayin Goku</h5>
-                    <p>18.990</p>
+                    <h5> Renegade 4x4 Automatica</h5>
+                    <p>2019</p>
                     <div class="botton">
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-primary">Cotizar</a>
                     </div>
                 </div>
 
             </div>
             <div class="producto">
-                <img src="asset/img/vegeta.blue.jpg" alt="">
+                <img src="asset/img/compass-blanca.webp" alt="">
                 <div class="price">
-                    <h5> Super Sayayin Goku</h5>
-                    <p>18.990</p>
+                    <h5> Compass 4x2 Automatica</h5>
+                    <p>2022</p>
                     <div class="botton">
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-primary">Cotizar</a>
                     </div>
                 </div>
 
             </div>
             <div class="producto">
-                <img src="asset/img/vegeta.jpg" alt="">
+                <img src="asset/img/compass-cafe.jpg" alt="">
                 <div class="price">
-                    <h5> Super Sayayin Goku</h5>
-                    <p>18.990</p>
+                    <h5> Compass 4x2 Manual</h5>
+                    <p>2022</p>
                     <div class="botton">
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-primary">Cotizar</a>
                     </div>
                 </div>
 
             </div>
             <div class="producto">
-                <img src="asset/img/vegeta.sa.jpg" alt="">
+                <img src="asset/img/compas-negra.jpg" alt="">
                 <div class="price">
-                    <h5> Super Sayayin Goku</h5>
-                    <p>18.990</p>
+                    <h5> Compass 4x4 Automatica</h5>
+                    <p>2022</p>
                     <div class="botton">
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-primary">Cotizar</a>
                     </div>
                 </div>
             </div>
     <div class="producto">
-                <img src="asset/img/vegeta.jpg" alt="">
+                <img src="asset/img/rubicon-gris.png" alt="">
                 <div class="price">
-                    <h5> Super Sayayin Goku</h5>
-                    <p>18.990</p>
+                    <h5> Rubicon</h5>
+                    <p>2018</p>
                     <div class="botton">
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-primary">Cotizar</a>
                     </div>
                 </div>
 
             </div>
             <div class="producto">
-                <img src="asset/img/vegeta.sa.jpg" alt="">
+                <img src="asset/img/rubicon-negro.jpeg" alt="">
                 <div class="price">
-                    <h5> Super Sayayin Goku</h5>
-                    <p>18.990</p>
+                    <h5> Rubicon</h5>
+                    <p>2019</p>
                     <div class="botton">
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-primary">Cotizar</a>
                     </div>
                 </div>
             </div>
             <div class="producto">
-                <img src="asset/img/vegeta.sa.jpg" alt="">
+                <img src="asset/img/rubicon-rojo.jpg" alt="">
                 <div class="price">
-                    <h5> Super Sayayin Goku</h5>
-                    <p>18.990</p>
+                    <h5> Rubicon</h5>
+                    <p>2017</p>
                     <div class="botton">
-                        <a href="#" class="btn btn-primary">Comprar</a>
+                        <a href="#" class="btn btn-primary">Cotizar</a>
                     </div>
                 </div>
             </div>
@@ -177,7 +177,7 @@
     </div>
 
     <div class="footer box">
-        <p><link rel="stylesheet" href="">@Todo Dragon Ball</p>
+        <p><link rel="stylesheet" href="">@Todo Jeep</p>
 
     </div>
 
